Further tweaks to stop overlapping in CMS

--- a/sports_worth.css
+++ b/sports_worth.css
@@ -37,6 +37,7 @@ h3{
 .frameContainer{
 	width: 350px;
 	height: 500px;
+	display:inline-block;
 }
 
 .frame{
